# acme-employee-payment

./: .flake8  .gitignore  README.md  pyproject.toml
src/employee_payment/: __init__.py  __main__.py  dataclasses.py  engines.py  parsers.py  settings.py  utils.py
tests/: sample.txt  test_engine.py  test_parser.py
